# pokerCFR

./: BaseParticipant.cpp  BaseParticipant.h  Bot.cpp  Bot.h  CMakeLists.txt  Card.cpp  Card.h  Deck.cpp  Deck.h  Game.cpp  Game.h  Move.h  Player.cpp  Player.h  Position.h  PotManager.cpp  RoundContext.h  Street.h  Table.cpp  Table.h  main.cpp  sandbox.cpp
src/cfr/: CFRTrainer.h  InfoSet.cpp  InfoSet.h  cfr_main.cpp
src/pokergame/: Action.h  BaseParticipant.cpp  Bot.cpp  Bot.h  Deck.cpp  Game.cpp  Game.h  Player.cpp  PotManager.cpp  PotManager.h  README.md  Table.cpp  Table.h
